# iflow-desktop

./: .env  .env.development  .env.production  .eslintrc.json  .gitignore  .local-dev-rules.md  .prettierrc  AI_TASKS.md  CLAUDE.md  DEVELOPMENT.md  IFLOW.md  README.md  RUST_BUILD_OPTIMIZATION.md  TASK_MANAGEMENT_GUIDE.md  TAURI_BASICS.md  eslint.config.js  index.html  migrate-data.ps1  package-build-fixed.ps1  package-build.ps1  package-lock.json  package.json  tsconfig.json  vite.config.test.ts  vite.config.ts
.claude/: settings.local.json
.claude/plans/: refactor-rust-backend.md  rewrite-naive-ui.md
.github/workflows/: build.yml
.iflow/: architecture.md  coding-style.md  deployment.md
.lingma/: AI_PROJECT_GUIDE.md
.lingma/rules/: development.md  guidelines.md  home.md
docs/superpowers/specs/: 2026-05-30-interaction-optimization-design.md
scripts/: task-manager.js
src/: App.vue  IFLOW.md  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  nsis-installer.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  zhipu_ai.rs
src-tauri/src/commands/: conversation.rs  iflow.rs  message.rs  mod.rs  totp.rs  zhipu.rs
src/__tests__/: chatStore.test.ts  logger.test.ts  tokenUtils.test.ts
src/components/: AgentConfigPanel.vue  ApiKeyDialog.vue  AppContent.vue  AppInit.vue  Calculator.vue  ChatHistory.vue  ChatInterface.vue  FileEditor.vue  FileExplorer.vue  InputArea.vue  InputDialog.vue  KeyboardHelpDialog.vue  MainLayout.vue  MessageList.vue  ModelSelector.vue  QuickToolsPanel.vue  SettingsPanel.vue  SplashScreen.vue  StatsPanel.vue  TOTPPanel.vue  TopToolbar.vue
src/composables/: index.ts  useApiKey.ts  useChatHandler.ts  useConversationExport.ts  useDialog.ts  useMarkdown.ts  useQuickTools.ts
src/constants/: index.ts
src/i18n/: index.ts
src/stores/: agentStore.ts  chatStore.ts  fileStore.ts  iflowStore.ts  quickToolsStore.ts
src/styles/: components.css
src/theme/: index.ts  naive.ts
src/types/: index.ts
src/utils/: agentManager.ts  api.ts  common.ts  configUtils.ts  errorHandler.ts  logger.ts  message.ts  tokenUtils.ts  totp.ts
src/utils/api/: conversation.ts  index.ts  tauri.ts  totp.ts  zhipu.ts
src/utils/helpers/: format.ts  index.ts  validation.ts
