[package]
name = "iflow-desktop"
version = "1.8.1"
description = "iFlow Desktop - AI 编程助手桌面应用"
authors = ["XY-JX"]
edition = "2021"
license = "MIT"
repository = "https://github.com/XY-JX/iflow-desktop"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

