[package]
name = "iflow-desktop"
version = "1.8.1"
description = "iFlow Desktop - AI 编程助手桌面应用"
authors = ["XY-JX"]
edition = "2021"
license = "MIT"
repository = "https://github.com/XY-JX/iflow-desktop"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
once_cell = "1.19"
futures-core = "0.3"
futures = "0.3"

[profile.release]
panic = "abort"            # 减少二进制大小
codegen-units = 1          # 更好的优化
lto = true                 # 链接时优化
opt-level = "s"            # 优化体积
strip = true               # 移除调试符号
incremental = false        # 发布构建禁用增量编译
